Set broker server as unique (#18)
