# docs/swagger.yaml
@@ -466,6 +466,10 @@ paths:
           description: Not Found
           schema:
             $ref: '#/definitions/errors.HTTPError'
+        "409":
+          description: Conflict
+          schema:
+            $ref: '#/definitions/errors.HTTPError'
         "500":
           description: Internal Server Error
           schema:
@@ -578,6 +582,10 @@ paths:
             $ref: '#/definitions/errors.HTTPError'
         "404":
           description: Not Found
+          schema:
+            $ref: '#/definitions/errors.HTTPError'
+        "409":
+          description: Conflict
           schema:
             $ref: '#/definitions/errors.HTTPError'
         "500":
